--- a/charts/templates/service.yaml
+++ b/charts/templates/service.yaml
@@ -1,16 +1,22 @@
+{{- range .Values.services }}
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fastapiapp.fullname" . }}
-  labels:
-    {{- include "fastapiapp.labels" . | nindent 4 }}
+  name: {{ .name }}-service
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort }}
-      nodePort: {{ .Values.service.nodePort }}
-      protocol: TCP
-      name: http
   selector:
-    {{- include "fastapiapp.selectorLabels" . | nindent 4 }}
+    app: {{ .name }}
+  ports:
+    - protocol: TCP
+      port: {{ .port }}  # Port externe du service
+      targetPort: {{ .targetPort }}  # Port interne du pod
+      {{- if .nodePort }}
+      nodePort: {{ .nodePort }} 
+      {{- end }}
+  {{- if .serviceType }}
+  type: {{ .serviceType }}  
+  {{- else }}
+  type: ClusterIP 
+  {{- end }}
+{{- end }}
