--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -1,85 +1,148 @@
-# Default values for fastapiapp.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
-replicaCount: 3
-
-image:
-  repository: sajjadhz/fastapiapp
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
-
-imagePullSecrets: 
-  - name: "regcred"
-nameOverride: ""
-fullnameOverride: ""
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
-podAnnotations: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-service:
-  type: NodePort
-  port: 80
-  nodePort: 30007  
-  targetPort: 8000
-
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+services:
+  
+  - name: movie
+    type: "deployment"
+    image:
+      repository: mirael13/movie_service
+      tag: latest
+    port: 80
+    targetPort: 8000
+    serviceType: ClusterIP
+    env:
+      - name: DATABASE_USER
+        key: POSTGRES_USER
+        secretName: "movie-db-secret"
+      - name: DATABASE_PASSWORD
+        key: POSTGRES_PASSWORD
+        secretName: "movie-db-secret"
+      - name: DATABASE_NAME
+        value: "moviedb"
+      - name: DATABASE_HOST
+        value: "movie-db-service"
+      - name: DATABASE_PORT
+        value: "5432"
+      - name: DATABASE_URL
+        value: "postgresql://$(DATABASE_USER):$(DATABASE_PASSWORD)@$(DATABASE_HOST):$(DATABASE_PORT)/$(DATABASE_NAME)"
+      - name: DATABASE_URI
+        value: "postgresql://$(DATABASE_USER):$(DATABASE_PASSWORD)@$(DATABASE_HOST):$(DATABASE_PORT)/$(DATABASE_NAME)"
+      - name: CAST_SERVICE_HOST_URL
+        value: "http://cast-service/api/v1/casts/"
+    resources:
+      requests:
+        cpu: "250m"
+        memory: "256Mi"
+      limits:
+        cpu: "500m"
+        memory: "512Mi"
+    hpa: 
+      minReplicas: 2
+      maxReplicas: 6
+      cpuTarget: 70
+      
+  - name: cast
+    type: "deployment"
+    image:
+      repository: mirael13/cast_service
+      tag: latest
+    port: 80
+    targetPort: 8000
+    serviceType: ClusterIP
+    env:
+      - name: DATABASE_USER
+        key: POSTGRES_USER
+        secretName: "cast-db-secret"
+      - name: DATABASE_PASSWORD
+        key: POSTGRES_PASSWORD
+        secretName: "cast-db-secret"
+      - name: DATABASE_NAME
+        value: "castdb"
+      - name: DATABASE_HOST
+        value: "cast-db-service"
+      - name: DATABASE_PORT
+        value: "5432"
+      - name: DATABASE_URL
+        value: "postgresql://$(DATABASE_USER):$(DATABASE_PASSWORD)@$(DATABASE_HOST):$(DATABASE_PORT)/$(DATABASE_NAME)"
+      - name: DATABASE_URI
+        value: "postgresql://$(DATABASE_USER):$(DATABASE_PASSWORD)@$(DATABASE_HOST):$(DATABASE_PORT)/$(DATABASE_NAME)"
+    resources:
+      requests:
+        cpu: "250m"
+        memory: "256Mi"
+      limits:
+        cpu: "500m"
+        memory: "512Mi"
+    hpa: 
+      minReplicas: 2
+      maxReplicas: 6
+      cpuTarget: 70
+      
+      
+  - name: test
+    type: "deployment"
+    image:
+      repository: mirael13/test_service
+      tag: latest
+    port: 80
+    targetPort: 8000
+    serviceType: ClusterIP
+    resources:
+      requests:
+        cpu: "250m"
+        memory: "256Mi"
+      limits:
+        cpu: "500m"
+        memory: "512Mi"
+    hpa: 
+      minReplicas: 2
+      maxReplicas: 6
+      cpuTarget: 70
+  
+  
+  - name: movie-db
+    type: "statefulset"
+    replicas: 1
+    image:
+      repository: postgres
+      tag: latest
+    port: 5432
+    targetPort: 5432
+    serviceType: ClusterIP
+    env:
+      - name: POSTGRES_USER
+        key: POSTGRES_USER
+        secretName: "movie-db-secret"
+      - name: POSTGRES_PASSWORD
+        key: POSTGRES_PASSWORD
+        secretName: "movie-db-secret"
+      - name: POSTGRES_DB
+        value: "moviedb"
+    volumeClaimTemplate:
+      resources:
+        requests:
+          storage: 10Gi
+      storageClassName: "local-path"
+    
+  - name: cast-db
+    type: "statefulset"
+    replicas: 1
+    image:
+      repository: postgres
+      tag: latest
+    port: 5432
+    targetPort: 5432
+    serviceType: ClusterIP
+    env:
+      - name: POSTGRES_USER
+        key: POSTGRES_USER
+        secretName: "cast-db-secret"
+      - name: POSTGRES_PASSWORD
+        key: POSTGRES_PASSWORD
+        secretName: "cast-db-secret"
+      - name: POSTGRES_DB
+        value: "castdb"
+    volumeClaimTemplate:
+      resources:
+        requests:
+          storage: 10Gi
+      storageClassName: "local-path"
+    
