--- a/charts/templates/ingress.yaml
+++ b/charts/templates/ingress.yaml
@@ -1,7 +1,9 @@
+{{- if .Values.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: fastapi-ingress
+  namespace: {{ .Values.ingress.namespace }}
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
@@ -28,3 +30,4 @@ spec:
                 name: cast-service
                 port:
                   number: 80
+{{- end }}
